--- a/CocktailApp/Pages/Index.cshtml
+++ b/CocktailApp/Pages/Index.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewData["Title"] = "Home page";
 }
+@functions {
+    public void test() {
+        Model.recipesList.Clear();
+    }
+}
 
 <head>
     <meta charset="utf-8" />
@@ -10,7 +15,38 @@
     <title>@ViewData["Title"] - Discover</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
+    <style>
+        .cards-wrapper {
+            display: flex;
+            justify-content: center;
+        }
+
+        .card img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+        .card {
+            margin: 0 0.5em;
+            box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+            border: none;
+            border-radius: 0;
+        }
+
+        .carousel-inner {
+            padding: 1em;
+        }
+
+        .carousel-control-prev,
+        .carousel-control-next {
+            background-color: #e1e1e1;
+            width: 5vh;
+            height: 5vh;
+            border-radius: 50%;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    </style>
 </head>
 
 <h2>Featured</h2>
@@ -41,7 +77,10 @@
                     <div class="card-body">
                         <h5 class="card-title">@recipe.RecipeName</h5>
                         <span>
-                            <small>@recipe.RecipeTime</small>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
+                                <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
+                            </svg> 
+                            @recipe.RecipeTime min
                         </span>
                     </div>
                 </div>
@@ -50,20 +89,45 @@
     }
 </div>
 
-<h2>Classical cocktails</h2>
 
-<div class="row">
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <a class="recipe-cards" asp-page-handler="ViewRecipe">
-            <div class="card">
-                <img class="card-img-top" src="" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Recipe 1</h5>
-                    <span>
-                    </span>
+<div class="col">
+    @foreach(var recipeType in Model.recipeTypeList)
+    {
+        <h2>@recipeType.TypeName</h2>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="cards-wrapper">
+                         @foreach(var recipe in Model.recipesList.Where(i => i.TypeId == recipeType.TypeId))
+                            {
+                                <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+                                    <a class="recipe-cards" asp-page-handler="ViewRecipe">
+                                        <div class="card">
+                                            <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">@recipe.RecipeName</h5>
+                                                <span>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
+                                                        <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
+                                                    </svg> 
+                                                    @recipe.RecipeTime min
+                                            </span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div> 
+                            }
+                    </div>
                 </div>
             </div>
-        </a>
-    </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    }
 </div>
-
