--- a/CocktailApp/Pages/Discover.cshtml
+++ b/CocktailApp/Pages/Discover.cshtml
@@ -61,13 +61,6 @@
                     
                             @if (@Model.userFavouritesList.Any(favourite => favourite.RecipeId == recipe.RecipeId)){
 
-                                @* <button type="submit" class="btn btn-danger" 
-                                style="padding: 0 6px 0 6px; font-size: 15px; margin-top: 5px; border: 0" 
-                                asp-page-handler="DeleteFromFavourites" 
-                                asp-route-recipeID= "@recipe.RecipeId"> 
-                                - Remove from favourites
-                                </button> *@
-
                                 <button type="submit" class="btn btn-link" asp-page-handler="DeleteFromFavourites"
                                 asp-route-recipeID= "@recipe.RecipeId"
                                 style="padding: 0; background: none"> 
@@ -87,15 +80,6 @@
                                 
                             } else {
 
-                                @* <button type="submit" class="btn btn-success" style="padding: 0 6px 0 6px; font-size: 15px; margin-top: 5px; border: 0"
-                                asp-page-handler="Favourite"
-                                asp-route-recipeID= "@recipe.RecipeId"> 
-                                + Add to favourites
-                                </button> *@
-
-                                
-                            @* I tried to fill the heart here. Couldn't get it right. Just ended up using a seperate SVG of a different filled in heart. *@
-
                                 <button type="submit" class="btn btn-link" asp-page-handler="Favourite"
                                 asp-route-recipeID= "@recipe.RecipeId" style="padding: 0; background: none"> 
                                 <svg xmlns="http://www.w3.org/2000/svg"  
@@ -112,11 +96,12 @@
                             }
 
                         </h5>
-                        
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
+                            <span style = "color: DodgerBlue">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="DodgerBlue" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                                 <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
                             </svg> 
                             @recipe.RecipeTime min
+                            </span>
                         
                         @if (!recipe.ContaintsAlcohol) {
                             <span class="badge bg-success">Mocktail</span>
