--- a/CocktailApp/Pages/Favourites.cshtml
+++ b/CocktailApp/Pages/Favourites.cshtml
@@ -1,20 +1,30 @@
 @page
 @model FavouritesModel
 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Favourites</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/css/favicon.png" type="image/x-icon" />
+</head>
+
 <div class="row">
       @foreach (var recipe in Model.usersFavouritesList) {
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             
             <div class="card" style = "margin-bottom: 10px">
 
-                <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
+                <a class="recipe-image" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                 <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image"> 
                 </a>
 
                 <form method="post">
 
                 <div class="card-body" style = "padding: 16px 16px 12px 16px">
-                    <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
+                    <a class="recipe-text" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId" style = "text-decoration: none;">
 
                     <h5 class="card-title" style="display: flex; justify-content: space-between; margin: 0">
                         @recipe.RecipeName 
@@ -43,7 +53,7 @@
                             </svg>
                         </button>
                     </h5>
-                    <span>
+                    <span style = "color: DodgerBlue">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                             <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
                         </svg> 
@@ -54,11 +64,6 @@
                     }
                     </a>
                 </div>
-
-                @* <button type="submit" class="btn btn-danger" style="width: 100%; height: 22.5px; padding: 0; font-size: 15px; border: 0" asp-page-handler="DeleteFromFavourites" 
-                asp-route-recipeID= "@recipe.RecipeId"> 
-                   - Remove from favourites
-                </button> *@
 
                 </form>
 
