--- a/CocktailApp/Pages/Index.cshtml
+++ b/CocktailApp/Pages/Index.cshtml
@@ -12,66 +12,32 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Discover</title>
+    <title>@ViewData["Title"] - Index</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <style>
-        .cards-wrapper {
-            display: flex;
-            justify-content: center;
-        }
-
-        .card img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-
-        .card {
-            margin: 0 0.5em;
-            box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-            border: none;
-            border-radius: 0;
-        }
-
-        .carousel-inner {
-            padding: 1em;
-        }
-
-        .carousel-control-prev,
-        .carousel-control-next {
-            background-color: #e1e1e1;
-            width: 5vh;
-            height: 5vh;
-            border-radius: 50%;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-    </style>
+    <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
 </head>
 
-<h2>Featured</h2>
+<h2>Cocktail of the day</h2>
 
 <div class="row">
     <div class="col">
-        <a class="recipe-cards">
+        <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@Model.featuredRecipe.RecipeId">
             <div class="card">
                 <img class="card-img-featured" src="@Model.featuredRecipe.RecipeImage" alt="Card image cap">
                  <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-                    <div class="d-flex justify-content-center align-items-center h-100">
-                        <p class="text-white mb-0">@Model.featuredRecipe.RecipeName</p>
-                    </div>
                  </div>
             </div>
         </a>
     </div>
 </div>
 
-<h2>Popular</h2>
+<h2>Most Rated</h2>
 
 <div class="row">
     @foreach (var recipe in Model.popuarList) {
         <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-            <a class="recipe-cards" asp-page-handler="ViewRecipe">
+            <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                 <div class="card">
                     <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image cap">
                     <div class="card-body">
@@ -101,7 +67,7 @@
                          @foreach(var recipe in Model.recipesList.Where(i => i.TypeId == recipeType.TypeId))
                             {
                                 <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                                    <a class="recipe-cards" asp-page-handler="ViewRecipe">
+                                    <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                                         <div class="card">
                                             <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image cap">
                                             <div class="card-body">
