--- a/CocktailApp/Pages/Shared/_Layout.cshtml
+++ b/CocktailApp/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Favourites">Favourites</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Register">Register</a>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
                 </div>
             </div>
         </nav>
