--- a/CocktailApp/Pages/Recipe.cshtml
+++ b/CocktailApp/Pages/Recipe.cshtml
@@ -13,7 +13,19 @@
 
 <img class="d-block w-100" src="@Model.recipe.RecipeImage" alt="Recipe Image">
 <br>
-<h1>@Model.recipe.RecipeName</h1>
+<h1>@Model.recipe.RecipeName
+  @if (@Model.recipe.Ratings.Count > 0)
+  {
+      <span class="align-top">
+          @for (int i = 0; i < Math.Round(Model.recipe.Ratings.Average(r => r.NumStars).Value); i++)
+          {
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#F8D359" class="bi bi-star-fill" viewBox="0 0 16 16">
+              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+          </svg>
+          }
+      </span>
+  }
+</h1>
 <h5>
     <span class="badge bg-success">@Model.recipeTags[0]</span>
     <span class="badge bg-info">@Model.recipeTags[1]</span>
