--- a/CocktailApp/Pages/Index.cshtml
+++ b/CocktailApp/Pages/Index.cshtml
@@ -21,14 +21,24 @@
 <h2>Cocktail of the day</h2>
 
 <div class="row">
-    <div class="col">
-        <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@Model.featuredRecipe.RecipeId">
-            <div class="card">
-                <img class="card-img-featured" src="@Model.featuredRecipe.RecipeImage" alt="Card image cap">
-                 <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
-                 </div>
-            </div>
-        </a>
+    <div class="container">
+        <div class="jumbotron text-center col-md-12">
+            <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@Model.featuredRecipe.RecipeId">
+                <div class="card">
+                    <div class="leftcontent">
+                        <img class="img-fluid" src="@Model.featuredRecipe.RecipeImage" alt="Card image cap">
+                    </div>
+                    <div class="rightcontent">
+                        <h3>@Model.featuredRecipe.RecipeName</h3>
+                        <span>@Model.featuredRecipe.RecipeDescription</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="jumbotron text-center col-md-4">
+
+        </div>
     </div>
 </div>
 
@@ -54,6 +64,8 @@
         </div>
     }
 </div>
+<br />
+<br />
 
 <h2>Quick and easy Recipes</h2>
 
@@ -77,46 +89,3 @@
         </div>
     }
 </div>
-
-
-@*<div class="col">
-    @foreach(var recipeType in Model.recipeTypeList)
-    {
-        <h2>@recipeType.TypeName</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="cards-wrapper">
-                         @foreach(var recipe in Model.recipesList.Where(i => i.TypeId == recipeType.TypeId))
-                            {
-                                <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                                    <a class="recipe-cards" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
-                                        <div class="card">
-                                            <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image cap">
-                                            <div class="card-body">
-                                                <h5 class="card-title">@recipe.RecipeName</h5>
-                                                <span>
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
-                                                        <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584.531.531 0 0 0 .013-.012l.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354a.717.717 0 0 0-.012.012A6.973 6.973 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1h-3zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0z"/>
-                                                    </svg> 
-                                                    @recipe.RecipeTime min
-                                            </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div> 
-                            }
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    }
-</div>*@
