--- a/CocktailApp/Pages/index.cshtml.css
+++ b/CocktailApp/Pages/index.cshtml.css
@@ -1,4 +1,35 @@
-﻿.cards-wrapper {
+﻿.container {
+    display: flex;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+.jumbotron img{
+    height: 20rem;
+    width: 20rem;
+    float: left;
+}
+
+.leftcontent {
+    width: 50%;
+    float: left;
+}
+
+.rightcontent {
+    position: absolute;
+    top: 20%;
+    left: 35%;
+}
+
+.rightcontent h3 {
+    margin-bottom: 2rem;
+}
+
+.rightcontent span {
+    padding: 3rem;
+}
+
+.cards-wrapper {
     display: flex;
     justify-content: flex-start;
 }
