--- a/CocktailApp/wwwroot/css/site.css
+++ b/CocktailApp/wwwroot/css/site.css
@@ -93,3 +93,44 @@ body {
   margin-top: 20px;
 }
 
+.jumbotron img {
+  height: 15rem;
+  width: 13rem;
+  float: left;
+}
+
+.leftcontent {
+  width: 50%;
+  float: left;
+}
+
+.rightcontent {
+  position: absolute;
+  top: 20%;
+  left: 35%;
+}
+
+.rightcontent h3 {
+  margin-bottom: 2rem;
+}
+
+.rightcontent span {
+  padding: 3rem;
+}
+
+.cards-wrapper {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.card img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card {
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+  border-radius: 0;
+}
